paper: add main results bar chart visualization

--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -242,8 +242,8 @@ Although the acceptance rate of tree-based drafting is lower than that of linear
 
 \begin{figure}[t]
   \centering
-  \fbox{\rule[-.5cm]{0cm}{3.2cm}\rule[-.5cm]{0.95\linewidth}{0cm}}
-  \caption{\textbf{Main results visualization (placeholder).} Bar chart of throughput/speedup for Table~\ref{tab:main-results}.}
+  \includegraphics[width=\linewidth]{../figures/main_results_bars.pdf}
+  \caption{\textbf{Main results comparison.} DynaTree achieves the highest throughput (193.4 tokens/sec) and speedup (1.62×) compared to all baselines, outperforming HuggingFace assisted generation and linear speculative decoding.}
   \label{fig:main-results}
 \end{figure}
 
