--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -286,7 +286,14 @@ Linear speculative & K=6 & 133.1 & 1.11 \\
 \end{table}
 
 \subsection{Hyperparameter Sensitivity}
-To understand the impact of design choices, we perform a comprehensive grid search over tree depth \(D \in \{3,4,5,6,7,8\}\), branching factor \(B \in \{2,3,4\}\), and pruning threshold \(\tau \in \{0.01,0.02,0.03,0.05,0.1\}\) across generation lengths ranging from 100 to 1000 tokens, totaling 450 configurations. Detailed visualizations are provided in Appendix~\ref{app:sweep} (Figure~\ref{fig:param-sweep}). Key findings include: (i)~\emph{Depth} exhibits diminishing returns beyond D=8, as verification overhead grows faster than the expected path length; (ii)~\emph{Branching factor} B=3 provides the best throughput-exploration trade-off, with B=4 introducing too much verification cost; (iii)~\emph{Pruning threshold} \(\tau=0.03\) is optimal, balancing aggressive pruning (which may discard valid paths) and loose thresholds (which waste computation on unlikely branches). These results confirm that adaptive probability-threshold pruning is essential to maintain an effective tree size within the verification budget.
+To understand the impact of design choices, we perform a comprehensive grid search over tree depth \(D \in \{3,4,5,6,7,8\}\), branching factor \(B \in \{2,3,4\}\), and pruning threshold \(\tau \in \{0.01,0.02,0.03,0.05,0.1\}\) across generation lengths ranging from 100 to 1000 tokens, totaling 450 configurations. Figure~\ref{fig:tree-config} illustrates the throughput trends across these parameters for 500-token generation. Key findings include: (i)~\emph{Depth} exhibits diminishing returns beyond D=8, as verification overhead grows faster than the expected path length (Figure~\ref{fig:tree-config}b); (ii)~\emph{Branching factor} B=3 provides the best throughput-exploration trade-off, with B=4 introducing too much verification cost (Figure~\ref{fig:tree-config}a); (iii)~\emph{Pruning threshold} \(\tau=0.03\) is optimal, balancing aggressive pruning (which may discard valid paths) and loose thresholds (which waste computation on unlikely branches) (Figure~\ref{fig:tree-config}c). These results confirm that adaptive probability-threshold pruning is essential to maintain an effective tree size within the verification budget. Additional detailed visualizations across all generation lengths are provided in Appendix~\ref{app:sweep} (Figure~\ref{fig:param-sweep}).
+
+\begin{figure}[t]
+  \centering
+  \includegraphics[width=\linewidth]{../figures/tree_config_comparison.pdf}
+  \caption{\textbf{Impact of tree configuration on throughput (500-token generation).} (a)~Branch factor impact for different depths (fixed \(\tau=0.03\)): B=3 achieves optimal throughput across all depths, with deeper trees benefiting more from branching. (b)~Depth impact for different branch factors (fixed \(\tau=0.03\)): throughput increases with depth up to D=8, after which verification overhead dominates. (c)~Pruning threshold impact for different depths (fixed B=3): \(\tau=0.03\) balances exploration and cost across all depths. The optimal configuration (D=8, B=3, \(\tau=0.03\), highlighted in terra cotta) achieves 221.4~tokens/s.}
+  \label{fig:tree-config}
+\end{figure}
 
 \subsection{Sequence Length Scaling}
 Figure~\ref{fig:length-scaling} and Table~\ref{tab:length-scaling} examine how DynaTree's performance varies with generation length. For each target length, we report the best-performing configuration identified in our parameter sweep, along with the corresponding baseline and DynaTree throughput. Several trends emerge: (i)~Speedup increases monotonically from 1.43\(\times\) at 100 tokens to a peak of 1.79\(\times\) at 500 tokens, as the one-time setup and verification overhead is amortized over more generated tokens; (ii)~Beyond 500 tokens, speedup plateaus or slightly decreases (1.71\(\times\) at 1000 tokens), likely due to changing token statistics and the accumulation of small KV-cache management costs; (iii)~The optimal tree depth varies with length (D=7 for shorter sequences, D=8 for 500 tokens, D=6 for 1000 tokens), reflecting the need to adapt exploration depth to the generation horizon. As shown in Figure~\ref{fig:length-scaling}, DynaTree consistently outperforms other speculative decoding baselines across all tested generation lengths, demonstrating robust performance scaling.
